--- a/n layer/merge_v2.ipynb
+++ b/n layer/merge_v2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "372b7c96",
    "metadata": {},
    "outputs": [],
@@ -154,18 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "08c0665f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataset = load_dataset(\"wikitext\", \"wikitext-2-raw-v1\", split=\"test[:1%]\")\n",
-    "texts = [t for t in dataset['text'] if len(t.strip()) > 0][:64]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6904fd0c",
    "metadata": {},
    "outputs": [],
@@ -185,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "38c9ec94",
    "metadata": {},
    "outputs": [],
@@ -249,48 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "dd57b591",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "\n",
-    "# 1) Extract features ONCE (same forward pass)\n",
-    "feature_mats = extract_ffn_features_single_pass(\n",
-    "    base_model, texts\n",
-    ")\n",
-    "\n",
-    "k = 2\n",
-    "windows = sliding_windows(len(base_model.transformer.h), k)\n",
-    "\n",
-    "for window in windows:\n",
-    "    # reload model for each candidate window\n",
-    "    model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "\n",
-    "    perms = compute_adjacent_permutations(feature_mats, window)\n",
-    "\n",
-    "    # merge ONLY this window\n",
-    "    merge_k_layers(model, window, perms)\n",
-    "\n",
-    "    # evaluate / save candidate here\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "0830f675",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline GPT-2 PPL: 46.98\n",
-      "Merged (window=[10, 11]) PPL: 66.76\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import torch\n",
@@ -331,6 +300,38 @@
     "        total_tokens += mask.sum().item()\n",
     "\n",
     "    return math.exp(total_nll / total_tokens)\n",
+    "\n",
+    "# # merged_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
+    "# # merge_k_layers(merged_model, window, perms)\n",
+    "\n",
+    "# merged_ppl = compute_perplexity(model, texts)\n",
+    "\n",
+    "# print(f\"Merged (window={window}) PPL: {merged_ppl:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c271ccb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9cc52aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline GPT-2 PPL: 46.98\n"
+     ]
+    }
+   ],
+   "source": [
     "dataset = load_dataset(\n",
     "    \"wikitext\", \"wikitext-2-raw-v1\", split=\"validation\"\n",
     ")\n",
@@ -338,37 +339,23 @@
     "base_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
     "base_ppl = compute_perplexity(base_model, texts)\n",
     "\n",
-    "print(f\"Baseline GPT-2 PPL: {base_ppl:.2f}\")\n",
-    "# merged_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "# merge_k_layers(merged_model, window, perms)\n",
-    "\n",
-    "merged_ppl = compute_perplexity(model, texts)\n",
-    "\n",
-    "print(f\"Merged (window={window}) PPL: {merged_ppl:.2f}\")\n"
+    "print(f\"Baseline GPT-2 PPL: {base_ppl:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "6085f6cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before recovery PPL: 66.76313123440836\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Before recovery PPL:\",\n",
-    "          compute_perplexity(model, texts))   "
+    "# print(\"Before recovery PPL:\",\n",
+    "#           compute_perplexity(model, texts))   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "adb754fd",
    "metadata": {},
    "outputs": [
@@ -389,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b0b78396",
    "metadata": {},
    "outputs": [
@@ -409,30 +396,30 @@
     }
    ],
    "source": [
-    "def count_unique_params(model):\n",
-    "    seen = set()\n",
-    "    total = 0\n",
-    "    for p in model.parameters():\n",
-    "        if id(p) not in seen:\n",
-    "            seen.add(id(p))\n",
-    "            total += p.numel()\n",
-    "    return total\n",
-    "def count_params_naive(model):\n",
-    "    return sum(p.numel() for p in model.parameters())\n",
-    "def print_param_stats(model, name=\"model\"):\n",
-    "    naive = count_params_naive(model)\n",
-    "    unique = count_unique_params(model)\n",
-    "    print(f\"{name}\")\n",
-    "    print(f\"  Naive params  : {naive:,}\")\n",
-    "    print(f\"  Unique params : {unique:,}\")\n",
-    "    print(f\"  Saved params  : {naive - unique:,}\")\n",
-    "print_param_stats(base_model, \"Original GPT-2\")\n",
-    "print_param_stats(model, \"Merged Model\")"
+    "# def count_unique_params(model):\n",
+    "#     seen = set()\n",
+    "#     total = 0\n",
+    "#     for p in model.parameters():\n",
+    "#         if id(p) not in seen:\n",
+    "#             seen.add(id(p))\n",
+    "#             total += p.numel()\n",
+    "#     return total\n",
+    "# def count_params_naive(model):\n",
+    "#     return sum(p.numel() for p in model.parameters())\n",
+    "# def print_param_stats(model, name=\"model\"):\n",
+    "#     naive = count_params_naive(model)\n",
+    "#     unique = count_unique_params(model)\n",
+    "#     print(f\"{name}\")\n",
+    "#     print(f\"  Naive params  : {naive:,}\")\n",
+    "#     print(f\"  Unique params : {unique:,}\")\n",
+    "#     print(f\"  Saved params  : {naive - unique:,}\")\n",
+    "# print_param_stats(base_model, \"Original GPT-2\")\n",
+    "# print_param_stats(model, \"Merged Model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "45ca807a",
    "metadata": {},
    "outputs": [
@@ -445,17 +432,11 @@
      ]
     }
    ],
-   "source": [
-    "l0 = model.transformer.h[window[0]].mlp\n",
-    "l1 = model.transformer.h[window[1]].mlp\n",
-    "\n",
-    "print(l0.c_fc.weight is l1.c_fc.weight)   # MUST be True\n",
-    "print(l0.c_proj.weight is l1.c_proj.weight)  # MUST be True\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "829a8de5",
    "metadata": {},
    "outputs": [],
@@ -477,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "62074d1e",
    "metadata": {},
    "outputs": [],
@@ -504,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "58cebdfe",
    "metadata": {},
    "outputs": [],
@@ -568,15 +549,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3af58abf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
+    "\n",
+    "# 1) Extract features ONCE (same forward pass)\n",
+    "feature_mats = extract_ffn_features_single_pass(\n",
+    "    base_model, texts\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "803a0e03",
    "metadata": {},
    "outputs": [
@@ -641,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "f6b94c14",
    "metadata": {},
    "outputs": [
@@ -651,7 +639,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "7424aad9",
    "metadata": {},
    "outputs": [
@@ -672,8 +660,7 @@
      "output_type": "stream",
      "text": [
       "Before training PPL: 57.563756951116204\n",
-      "[Recovery] step 100 | loss 4.2764\n",
-      "After training PPL: 36.957162099881664\n"
+      "After training PPL: 50.98165648508262\n"
      ]
     }
    ],
@@ -684,7 +671,7 @@
     "recovery_finetune(\n",
     "    train_model,\n",
     "    train_loader,\n",
-    "    steps=1000,   # start small\n",
+    "    steps=10,   # start small\n",
     "    lr=1e-5,\n",
     "    device=device\n",
     ")\n",
@@ -695,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "b8a9dcec",
    "metadata": {},
    "outputs": [
@@ -703,8 +690,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation PPL after recovery: 36.96\n",
-      "TEST PPL after recovery: 51.22\n"
+      "Validation PPL after recovery: 50.98\n",
+      "TEST PPL after recovery: 70.07\n"
      ]
     }
    ],
@@ -725,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "7587705e",
    "metadata": {},
    "outputs": [
@@ -733,7 +720,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After training PPL: 39.75162276557167\n"
+      "After training PPL: 67.12803486098032\n"
      ]
     }
    ],
@@ -744,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "e8014a31",
    "metadata": {},
    "outputs": [
@@ -761,9 +748,9 @@
      "text": [
       "\n",
       "Generated output:\n",
-      "India will become global leader in AI because 1. it has the highest level of knowledge and knowledge of the world and 2. it has the highest level of knowledge and knowledge of the world.\n",
+      "India will become global leader in AI because 1. it has the world's first AI-enabled smart car, and 2. it has the world's first AI-enabled smart car.\n",
       "\n",
-      "\n"
+      "The\n"
      ]
     }
    ],
@@ -774,6 +761,29 @@
     "    sample_out = train_model.generate(**inputs, max_length=40)\n",
     "print(\"\\nGenerated output:\")\n",
     "print(tokenizer.decode(sample_out[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "36c81f18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l0 = model.transformer.h[window[0]].mlp\n",
+    "l1 = model.transformer.h[window[1]].mlp\n",
+    "\n",
+    "print(l0.c_fc.weight is l1.c_fc.weight)   # MUST be True\n",
+    "print(l0.c_proj.weight is l1.c_proj.weight)  # MUST be True\n"
    ]
   },
   {
