--- a/n layer/merge_v2.ipynb
+++ b/n layer/merge_v2.ipynb
@@ -377,49 +377,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b78396",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original GPT-2\n",
-      "  Naive params  : 124,439,808\n",
-      "  Unique params : 124,439,808\n",
-      "  Saved params  : 0\n",
-      "Merged Model\n",
-      "  Naive params  : 119,717,376\n",
-      "  Unique params : 119,717,376\n",
-      "  Saved params  : 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# def count_unique_params(model):\n",
-    "#     seen = set()\n",
-    "#     total = 0\n",
-    "#     for p in model.parameters():\n",
-    "#         if id(p) not in seen:\n",
-    "#             seen.add(id(p))\n",
-    "#             total += p.numel()\n",
-    "#     return total\n",
-    "# def count_params_naive(model):\n",
-    "#     return sum(p.numel() for p in model.parameters())\n",
-    "# def print_param_stats(model, name=\"model\"):\n",
-    "#     naive = count_params_naive(model)\n",
-    "#     unique = count_unique_params(model)\n",
-    "#     print(f\"{name}\")\n",
-    "#     print(f\"  Naive params  : {naive:,}\")\n",
-    "#     print(f\"  Unique params : {unique:,}\")\n",
-    "#     print(f\"  Saved params  : {naive - unique:,}\")\n",
-    "# print_param_stats(base_model, \"Original GPT-2\")\n",
-    "# print_param_stats(model, \"Merged Model\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "45ca807a",
    "metadata": {},
    "outputs": [],
@@ -555,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "803a0e03",
    "metadata": {},
    "outputs": [
@@ -563,261 +520,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before merging PPL: 46.97976365832357\n",
-      "Window [0, 1] | PPL 196.45\n",
-      "Window [1, 2] | PPL 101.00\n",
-      "Window [2, 3] | PPL 86.62\n",
-      "Window [3, 4] | PPL 74.25\n",
-      "Window [4, 5] | PPL 80.09\n",
-      "Window [5, 6] | PPL 92.55\n",
-      "Window [6, 7] | PPL 60.75\n",
-      "Window [7, 8] | PPL 58.43\n",
-      "Window [8, 9] | PPL 57.56\n",
-      "Window [9, 10] | PPL 61.13\n",
-      "Window [10, 11] | PPL 66.76\n",
-      "\n",
-      "BEST WINDOW: [8, 9]\n",
-      "BEST PPL AFTER MERGING: 57.56\n"
+      "Before merging PPL: 46.97976365832357\n"
      ]
     }
    ],
    "source": [
-    "best_ppl = float(\"inf\")\n",
-    "best_window = None\n",
-    "best_state_dict = None\n",
     "\n",
-    "k = 2\n",
-    "windows = sliding_windows(len(base_model.transformer.h), k)\n",
     "\n",
     "model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
     "print(\"Before merging PPL:\",\n",
-    "          compute_perplexity(model, texts))\n",
-    "\n",
-    "for window in windows:\n",
-    "    model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "\n",
-    "    perms = compute_adjacent_permutations(feature_mats, window)\n",
-    "    merge_k_layers(model, window, perms)\n",
-    "\n",
-    "    ppl = compute_perplexity(model, texts)\n",
-    "    print(f\"Window {window} | PPL {ppl:.2f}\")\n",
-    "\n",
-    "    if ppl < best_ppl:\n",
-    "        best_ppl = ppl\n",
-    "        best_window = window\n",
-    "        best_state_dict = {\n",
-    "            k: v.detach().cpu().clone()\n",
-    "            for k, v in model.state_dict().items()\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "best_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "best_model.load_state_dict(best_state_dict)\n",
-    "\n",
-    "print(f\"\\nBEST WINDOW: {best_window}\")\n",
-    "print(f\"BEST PPL AFTER MERGING: {best_ppl:.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f6b94c14",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_model = GPT2LMHeadModel.from_pretrained(\"gpt2\").to(device)\n",
-    "train_model.load_state_dict(best_state_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "7424aad9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before training PPL: 57.563756951116204\n",
-      "After training PPL: 50.988636270115435\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Before training PPL:\",\n",
-    "          compute_perplexity(train_model, texts))\n",
-    "\n",
-    "recovery_finetune(\n",
-    "    train_model,\n",
-    "    train_loader,\n",
-    "    steps=10,   # start small\n",
-    "    lr=1e-5,\n",
-    "    device=device\n",
-    ")\n",
-    "\n",
-    "print(\"After training PPL:\",\n",
-    "        compute_perplexity(train_model, texts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b8a9dcec",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation PPL after recovery: 50.99\n",
-      "TEST PPL after recovery: 70.06\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ---- TEST EVALUATION ----\n",
-    "test_dataset = load_dataset(\n",
-    "    \"wikitext\", \"wikitext-2-raw-v1\", split=\"test\"\n",
-    ")\n",
-    "\n",
-    "test_texts = [t for t in test_dataset[\"text\"] if len(t.strip()) > 0][:500]\n",
-    "\n",
-    "val_ppl = compute_perplexity(train_model, texts)\n",
-    "print(f\"Validation PPL after recovery: {val_ppl:.2f}\")\n",
-    "\n",
-    "test_ppl = compute_perplexity(train_model, test_texts)\n",
-    "print(f\"TEST PPL after recovery: {test_ppl:.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "7587705e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After training PPL: 66.83528990070141\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"After training PPL:\",\n",
-    "        compute_perplexity(train_model, train_texts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "e8014a31",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Generated output:\n",
-      "India will become global leader in AI because 1. it has the ability to make decisions in the world and 2. it has the ability to make decisions in the world.\n",
-      "\n",
-      "The AI system is\n"
-     ]
-    }
-   ],
-   "source": [
-    "prompt = \"India will become global leader in AI because 1. it has\"\n",
-    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
-    "with torch.no_grad():\n",
-    "    sample_out = train_model.generate(**inputs, max_length=40)\n",
-    "print(\"\\nGenerated output:\")\n",
-    "print(tokenizer.decode(sample_out[0], skip_special_tokens=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "36c81f18",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "l0 = model.transformer.h[window[0]].mlp\n",
-    "l1 = model.transformer.h[window[1]].mlp\n",
-    "\n",
-    "print(l0.c_fc.weight is l1.c_fc.weight)   # MUST be True\n",
-    "print(l0.c_proj.weight is l1.c_proj.weight)  # MUST be True\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "c6dd79cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original GPT-2\n",
-      "  Naive params  : 124,439,808\n",
-      "  Unique params : 124,439,808\n",
-      "  Saved params  : 0\n",
-      "Merged Model\n",
-      "  Naive params  : 119,717,376\n",
-      "  Unique params : 119,717,376\n",
-      "  Saved params  : 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "def count_unique_params(model):\n",
-    "    seen = set()\n",
-    "    total = 0\n",
-    "    for p in model.parameters():\n",
-    "        if id(p) not in seen:\n",
-    "            seen.add(id(p))\n",
-    "            total += p.numel()\n",
-    "    return total\n",
-    "def count_params_naive(model):\n",
-    "    return sum(p.numel() for p in model.parameters())\n",
-    "def print_param_stats(model, name=\"model\"):\n",
-    "    naive = count_params_naive(model)\n",
-    "    unique = count_unique_params(model)\n",
-    "    print(f\"{name}\")\n",
-    "    print(f\"  Naive params  : {naive:,}\")\n",
-    "    print(f\"  Unique params : {unique:,}\")\n",
-    "    print(f\"  Saved params  : {naive - unique:,}\")\n",
-    "print_param_stats(base_model, \"Original GPT-2\")\n",
-    "print_param_stats(model, \"Merged Model\")\n"
+    "          compute_perplexity(model, texts))"
    ]
   },
   {
@@ -846,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "f64c6dc5",
    "metadata": {},
    "outputs": [
@@ -854,17 +566,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Window [0, 1] | PPL 196.45\n",
-      "Window [1, 2] | PPL 101.00\n",
-      "Window [2, 3] | PPL 86.62\n",
-      "Window [3, 4] | PPL 74.25\n",
-      "Window [4, 5] | PPL 80.09\n",
-      "Window [5, 6] | PPL 92.55\n",
-      "Window [6, 7] | PPL 60.75\n",
-      "Window [7, 8] | PPL 58.43\n",
-      "Window [8, 9] | PPL 57.56\n",
-      "Window [9, 10] | PPL 61.13\n",
-      "Window [10, 11] | PPL 66.76\n"
+      "Window [0, 1, 2, 3] | PPL 95623.84\n",
+      "Window [1, 2, 3, 4] | PPL 3289.73\n",
+      "Window [2, 3, 4, 5] | PPL 4249.91\n",
+      "Window [3, 4, 5, 6] | PPL 963.31\n",
+      "Window [4, 5, 6, 7] | PPL 1823.28\n",
+      "Window [5, 6, 7, 8] | PPL 306.99\n",
+      "Window [6, 7, 8, 9] | PPL 212.60\n",
+      "Window [7, 8, 9, 10] | PPL 175.50\n",
+      "Window [8, 9, 10, 11] | PPL 352.87\n"
      ]
     }
    ],
@@ -873,7 +583,7 @@
     "best_window = None\n",
     "best_model = None   # <-- store MODEL OBJECT, not state_dict\n",
     "\n",
-    "k = 2\n",
+    "k = 4\n",
     "windows = sliding_windows(len(base_model.transformer.h), k)\n",
     "\n",
     "for window in windows:\n",
@@ -893,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "6c89c24d",
    "metadata": {},
    "outputs": [
@@ -916,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "73b39582",
    "metadata": {},
    "outputs": [
@@ -924,8 +634,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before recovery PPL: 57.563756951116204\n",
-      "After recovery PPL: 50.34575648285173\n"
+      "Before recovery PPL: 175.4980100246964\n",
+      "After recovery PPL: 124.45890570165714\n"
      ]
     }
    ],
@@ -947,7 +657,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "9116883d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation PPL after recovery: 124.46\n",
+      "TEST PPL after recovery: 169.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---- TEST EVALUATION ----\n",
+    "test_dataset = load_dataset(\n",
+    "    \"wikitext\", \"wikitext-2-raw-v1\", split=\"test\"\n",
+    ")\n",
+    "\n",
+    "test_texts = [t for t in test_dataset[\"text\"] if len(t.strip()) > 0][:500]\n",
+    "\n",
+    "val_ppl = compute_perplexity(best_model, texts)\n",
+    "print(f\"Validation PPL after recovery: {val_ppl:.2f}\")\n",
+    "\n",
+    "test_ppl = compute_perplexity(best_model, test_texts)\n",
+    "print(f\"TEST PPL after recovery: {test_ppl:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "c40c8afa",
    "metadata": {},
    "outputs": [
@@ -955,24 +695,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameter containing:\n",
-      "tensor([[-0.0113,  0.0835,  0.0336,  ..., -0.0634, -0.1078, -0.0648],\n",
-      "        [-0.0199, -0.0391,  0.0831,  ..., -0.1936,  0.0187,  0.0800],\n",
-      "        [ 0.1375, -0.0130,  0.0311,  ...,  0.0701, -0.0677,  0.1381],\n",
-      "        ...,\n",
-      "        [ 0.0741, -0.0061, -0.1858,  ...,  0.0620,  0.0780,  0.1476],\n",
-      "        [ 0.0216,  0.1608,  0.0733,  ..., -0.0876,  0.0063,  0.0154],\n",
-      "        [-0.0899,  0.0435,  0.0539,  ..., -0.0951,  0.1215,  0.0606]],\n",
-      "       device='cuda:0', requires_grad=True)\n",
-      "Parameter containing:\n",
-      "tensor([[-0.0113,  0.0835,  0.0336,  ..., -0.0634, -0.1078, -0.0648],\n",
-      "        [-0.0199, -0.0391,  0.0831,  ..., -0.1936,  0.0187,  0.0800],\n",
-      "        [ 0.1375, -0.0130,  0.0311,  ...,  0.0701, -0.0677,  0.1381],\n",
-      "        ...,\n",
-      "        [ 0.0741, -0.0061, -0.1858,  ...,  0.0620,  0.0780,  0.1476],\n",
-      "        [ 0.0216,  0.1608,  0.0733,  ..., -0.0876,  0.0063,  0.0154],\n",
-      "        [-0.0899,  0.0435,  0.0539,  ..., -0.0951,  0.1215,  0.0606]],\n",
-      "       device='cuda:0', requires_grad=True)\n",
       "True\n",
       "True\n"
      ]
@@ -989,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "11164687",
    "metadata": {},
    "outputs": [
@@ -1002,8 +724,8 @@
       " Unique: 124439808\n",
       "\n",
       "Merged (tied) model\n",
-      " Naive : 119717376\n",
-      " Unique: 119717376\n"
+      " Naive : 110272512\n",
+      " Unique: 110272512\n"
      ]
     }
    ],
@@ -1031,11 +753,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "63717d27",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated output:\n",
+      "India will become global leader in AI because 1. it has the ability to be the world AI leader. 2. it has the ability to be the world AI leader. 3. it has the ability\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"India will become global leader in AI because 1. it has\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "with torch.no_grad():\n",
+    "    sample_out = best_model.generate(**inputs, max_length=40)\n",
+    "print(\"\\nGenerated output:\")\n",
+    "print(tokenizer.decode(sample_out[0], skip_special_tokens=True))"
+   ]
   },
   {
    "cell_type": "code",
